Import of SHARYANTO/App-HasPrereqs-0.04 from CPAN.
gitpan-cpan-distribution: App-HasPrereqs
gitpan-cpan-version:      0.04
gitpan-cpan-path:         SHARYANTO/App-HasPrereqs-0.04.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,22 +1,22 @@
-version = 0.03
+version = 0.04
 
 name    = App-HasPrereqs
 author  = Steven Haryanto <stevenharyanto@gmail.com>
 license = Perl_5
 copyright_holder = Steven Haryanto
 
-[MetaResources]
-homepage    = http://metacpan.org/dist/App-HasPrereqs
-repository  = http://github.com/sharyanto/perl-App-HasPrereqs
-
-[@SHARYANTO]
+[@Author::SHARYANTO]
+:version=0.23
 
 [Prereqs]
-perl=5.010000
+;!lint-prereqs assume-used # spec
+Rinci=1.1.0
+
+perl=5.010001
 Config::IniFiles=0
 Log::Any=0
 Module::Path=0
 Sort::Versions=0
 
 ;cli script
-Perinci::CmdLine=0.62
+Perinci::CmdLine::Any=0
