Import of SHARYANTO/App-HasPrereqs-0.05 from CPAN.
gitpan-cpan-distribution: App-HasPrereqs
gitpan-cpan-version:      0.05
gitpan-cpan-path:         SHARYANTO/App-HasPrereqs-0.05.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -20,7 +20,7 @@ requires:
   Config::IniFiles: '0'
   Log::Any: '0'
   Module::Path: '0'
-  Perinci::CmdLine::Any: '0'
+  Perinci::CmdLine::Any: '0.06'
   Rinci: v1.1.0
   Sort::Versions: '0'
   perl: '5.010001'
@@ -28,11 +28,15 @@ resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=App-HasPrereqs
   homepage: https://metacpan.org/release/App-HasPrereqs
   repository: git://github.com/sharyanto/perl-App-HasPrereqs.git
-version: '0.04'
+version: '0.05'
 x_Dist_Zilla:
   perl:
     version: '5.018001'
   plugins:
+    -
+      class: Dist::Zilla::Plugin::Rinci::ScriptFromFunc
+      name: Rinci::ScriptFromFunc
+      version: '0.01'
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Author::SHARYANTO/@Filter/GatherDir'
