--- a/dist.ini
+++ b/dist.ini
@@ -1,14 +1,11 @@
-version = 0.05
+version = 0.06
 
 name    = App-HasPrereqs
-author  = Steven Haryanto <stevenharyanto@gmail.com>
-license = Perl_5
-copyright_holder = Steven Haryanto
 
 [Rinci::ScriptFromFunc]
 script= func=/App/HasPrereqs/has_prereqs, prefer_lite=1
 
-[@Author::SHARYANTO]
+[@Author::PERLANCAR]
 :version=0.23
 
 [Prereqs]
@@ -18,5 +15,5 @@ Rinci=1.1.0
 perl=5.010001
 Config::IniFiles=0
 Log::Any=0
-Module::Path=0
+Module::Path::More=0
 Sort::Versions=0
